role infos commented